--- a/style.css
+++ b/style.css
@@ -42,6 +42,8 @@ header {
 #survey-form {
   display: flex;
   flex-direction: column;
+  flex-wrap: wrap;
+  justify-content: center;
   padding: 20px;
   margin: 20px;
 }
@@ -49,6 +51,7 @@ header {
 .form-e {
   display: flex;
   flex-direction: column;
+  flex-wrap: wrap;
   padding-top: 15px;
   padding-bottom: 15px;
   font-size: 20px;
