--- a/style.css
+++ b/style.css
@@ -17,18 +17,21 @@ header {
   margin-right: -50vw;
   margin-top: -20px;
   margin-bottom: 30px;
-  padding: 15px;
+  padding-top: 15px;
+  padding-bottom: 15px;
 }
 
 #title {
   font-size: 35px;
   font-weight: normal;
   margin-bottom: 2px;
+  text-align: center;
 }
 
 #description {
   font-size: 15px;
   margin-top: 2px;
+  text-align: center;
 }
 
 .container {
@@ -42,8 +45,6 @@ header {
 #survey-form {
   display: flex;
   flex-direction: column;
-  flex-wrap: wrap;
-  justify-content: center;
   padding: 20px;
   margin: 20px;
 }
@@ -51,7 +52,6 @@ header {
 .form-e {
   display: flex;
   flex-direction: column;
-  flex-wrap: wrap;
   padding-top: 15px;
   padding-bottom: 15px;
   font-size: 20px;
