--- a/style.scss
+++ b/style.scss
@@ -16,16 +16,19 @@ header{
     margin-right: -50vw;
     margin-top: -20px;
     margin-bottom: 30px;
-    padding: 15px;
+    padding-top: 15px;
+    padding-bottom: 15px;
 }
 #title{
     font-size: 35px;
     font-weight: normal;
     margin-bottom: 2px;
+    text-align: center;
 }
 #description{
     font-size: 15px;
     margin-top: 2px;
+    text-align: center;
 }
 .container{
     background-color: rgba(#000000, 0.5);
@@ -37,15 +40,12 @@ header{
 #survey-form{
     display: flex;
     flex-direction: column;
-    flex-wrap: wrap;
-    justify-content: center;
     padding: 20px;
     margin: 20px;
 }
 .form-e{
     display: flex;
     flex-direction: column;
-    flex-wrap: wrap;
     padding-top: 15px;
     padding-bottom: 15px;
     font-size: 20px;
